# skootils

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING-python.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: build.yml
scripts/: build.py  rebuild.sh  rename_binaries.py  verify_binaries.py
src/: README.md
src/frontend/: .prettierignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
src/frontend/src/: app.css
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/src-tauri/icons/: icon.icns
src/frontend/src-tauri/src/: commands.rs  learnatvcs.rs  main.rs  paths.rs  powerschool.rs  scrape.rs
src/frontend/src/lib/: AccountInput.svelte  AlertError.svelte  AlertWarning.svelte  AssignmentInput.svelte  Card.svelte  DateInput.svelte  HomeButton.svelte  Interprog.svelte  Notification.svelte  QuarterInput.svelte  WeightPicker.svelte  WhatIf.svelte
src/frontend/src/routes/: +page.svelte  __layout.svelte  config.svelte  email.svelte  index.svelte  powerschool.svelte  results.svelte  scrape.svelte  wipe.svelte
src/frontend/src/routes/email/: +page.svelte
src/frontend/src/routes/learnatvcs/: +page.svelte  config.svelte  index.svelte  results.svelte  scrape.svelte
src/frontend/src/routes/learnatvcs/results/: +page.svelte
src/frontend/src/routes/learnatvcs/scrape/: +page.svelte
src/frontend/src/routes/powerschool/: +page.svelte  index.svelte  results.svelte
src/frontend/src/routes/powerschool/results/: +page.svelte
src/frontend/src/routes/wipe/: +page.svelte
src/interprog/: LICENSE.txt  README.md  pyproject.toml
src/interprog-py/: README.md  pyproject.toml
src/interprog-py/interprog/: __init__.py
src/interprog-py/tests/: test_interprog_py.py
src/interprog/interprog/: __init__.py
src/interprog/tests/: test_interprog.py
src/learnatvcs/: .gitignore  Brewfile  CONTRIBUTING.md  README.md  __main__.spec  learnatvcs.spec  pyproject.toml
src/learnatvcs.rs/: .gitignore  Cargo.toml  README.md
src/learnatvcs.rs/src/: datematcher.rs  errors.rs  lib.rs  main.rs  models.rs  scraper.rs  utils.rs
src/learnatvcs/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
src/learnatvcs/learnatvcs/: __init__.py  __main__.py  highlighter.py  models.py  pattern.py  process.py  storage.py
src/learnatvcs/tests/: test_version.py
src/powerschool/: CONTRIBUTING.md  README.md  __main__.spec  alltime.spec  for_class.spec  powerschool.spec  pyproject.toml
src/powerschool.rs/: Cargo.toml  README.md
src/powerschool.rs/src/: lib.rs
src/powerschool/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
src/powerschool/.github/workflows/: ci.yml  release.yml
src/powerschool/powerschool/: __init__.py  __main__.py  logic.py  reqbased.py  storage.py
src/powerschool/powerschool/history/: alltime.py  for_class.py
src/powerschool/tests/: test_version.py
src/summarize/: CONTRIBUTING.md  README.md  pyproject.toml
src/summarize/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
src/summarize/.github/workflows/: ci.yml  release.yml
src/summarize/summarize/: __init__.py  __main__.py
src/summarize/tests/: test_version.py  test_works.py
