[package]
name = "learnatvcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "learnatvcs"
path = "src/lib.rs"

[[bin]]
name = "learnatvcs"
path = "src/main.rs"

[dependencies]
futures = "^0.3.25"
lazy_static = "^1.4.0"
regex = "^1.7.0"
reqwest = { version = "^0.11.12", features = ["cookies"] }
scraper = "^0.13.0"
serde = { version = "^1.0.147", features = ["derive"] }
serde_json = "1.0.88"
thiserror = "^1.0.37"
tokio = { version = "^1.21.2", features = ["full"] }
# tl = { version = "0.7.7", features = ["simd"] }
