[package]
name = "learnatvcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "learnatvcs"
path = "src/lib.rs"

[[bin]]
name = "learnatvcs"
path = "src/main.rs"

[dependencies]
async-recursion = "1.0.2"
futures = "0.3.26"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["cookies"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json","env-filter"] }
# tl = { version = "0.7.7", features = ["simd"] }
