[tool.poetry]
name = "summarize"
description = "Summarize text, AI or algorithmic"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]
version = "0.1.0"

readme = "README.md"
license = "GPL-3.0-or-later"

classifiers = [
    # Get the list of trove classifiers here: https://pypi.org/classifiers/
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
]
homepage = "https://github.com/ThatXliner/summarize"
# keywords = ["awesome", "project"]  # Maximum of 5 keywords

[tool.poetry.dependencies]
python = "^3.7"
sumy = "^0.10.0"
transformers = "^4.20.1"
torch = "^1.12.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.8.0"
pylint = "^2.13.9"
toml = "^0.10.2"
hypothesis = "^6.50.1"
shed = "^0.10.1"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"

[tool.poe.tasks]
# Code linting
mypy   = {cmd = "mypy summarize --strict", help = "Run MyPy on codebase"}
pylint = {cmd = "pylint summarize --fail-under=8", help = "Run Pylint on codebase"}
check_black = {"cmd" = "black summarize --check"}
check_isort = {"cmd" = "isort summarize --check --profile=black"}
style    = ["check_black", "check_isort"]
codebase = ["pylint", "mypy"]


    [tool.poe.tasks.format]
    cmd = "shed"
    help = "Format code"

    [tool.poe.tasks.lint]
    sequence = ["style", "codebase"]
    help = "Lint codebase"

    [tool.poe.tasks.test]
    cmd = "pytest -vvv --cov=summarize"
    help = "Simply run test suite"

    [tool.poe.tasks.ci]
    cmd = "pytest -vvv --cov=summarize --cov-report=xml"
    help = "This workflow is for Github Actions"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
